updates made to Pom